2008-05-20  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/hydrogensextension.cpp: Fixed PR 1947734, 
	now the number of hydrogrens most people would expect are added....

2008-05-20  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	Changes from the win32 build:

	* CMakeLists.txt: Change "C:\Program Files\avogadro" into  "C:\\Program
	Files\\avogadro".

	* avogadro/src/main.cpp: Windows build had problems with printVersion/
	printHelp. Quick fix with cout & #ifdef WIN32.

	* libavogadro/src/cylinder.cpp: Make sure M_PI isdefined.

	* libavogadro/src/elementtranslate.cpp: Global instance should be
	extern.

	* libavogadro/src/engines/iso.cpp: MSVC doesn't have
	__attribute__((aligned(16)). Quick fix with #ifdef WIN32 and without
	the data alignment.

	* libavogadro/src/engines/labelengine.cpp: Local instance should not
	be extern.

	* libavogadro/src/engines/polygonengine.cpp: Change static_cast<const
	Atom*> into static_cast<Atom*>.

	* libavogadro/src/periodictableview.cpp: Local instance should not be
	extern.

	* libavogadro/src/tools/aligntool.cpp: Change static_cast<const Atom*> 
	into static_cast<Atom*>.

	* libavogadro/src/tools/bondcentrictool.cpp: This file defined its own
	isnan() function which resulted in a conflict with OpenBabel::IsNan().
	Now uses OpenBabel::IsNan().

	* libavogadro/src/tools/drawtool.cpp:  Local instance should not be
	extern.

	* scripts/avogadro.nsi: update installer generating script.

2008-05-19  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/drawtool.cpp: Fixed the same bug that was
	fixed in navigate tool where no atoms were in the molecule.

	* libavogadro/src/tools/navigatetool.cpp: Made the valid molecule
	check safer.

	* libavogadro/src/tools/manipulatetool.*: Made the manipulate tool a
	lot faster by only saving undo points on mouse up and mouse down.

	* CMakeLists.txt, avogadro/src/CMakeLists.txt: Added -DQT_NO_DEBUG to